# django-forwardemail

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  context7.json  llms-full.txt  llms.txt  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: publish.yml  test.yml
django_forwardemail/: __init__.py  admin.py  backends.py  models.py  services.py
django_forwardemail/migrations/: 0001_initial.py
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/codedocs/: architecture.md  email-configuration.md  email-delivery-pipeline.md  index.md  site-resolution.md
docs/codedocs/api-reference/: admin.md  apps.md  backends.md  models.md  services.md
docs/codedocs/guides/: async-email-with-celery.md  multi-site-deployments.md  send-with-service.md  use-django-email-backend.md
tests/: test_backend.py
